maze.island.IslandMaze.scala.code
override def run() {
  vaNord()
  while(!estSurBiscuit())
  	longeGch()
  prendBiscuit()
}

def longeGch(){
  gauche()
  if(!estFaceMur())
    avance()
  else {
    droite()
    while(estFaceMur())
      droite()
    avance()
       }
}

def vaNord() {
  setDirection(Direction.nord)
  do {
    if (!estFaceMur())
    	avance()
    gauche()
    avance()
    droite()
  }while(!estFaceMur())
}